Fix warnings about deprecated Float(float) and Integer(int) constructors
Change all calls to the deprecated constructors to their respective valueOf static methods.